{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 215,
  "lineage": "2bf4e247-bee5-d70e-4937-4835322f4ad8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:network-acl/acl-0b26998fb6ff5de80",
            "default_network_acl_id": "acl-0b26998fb6ff5de80",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b26998fb6ff5de80",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "553999167352",
            "subnet_ids": [
              "subnet-00af69a7d8996a975",
              "subnet-02b404ea155990385",
              "subnet-070fcfa3b6c1d474a",
              "subnet-08d3ac8eb999e7814",
              "subnet-0abaa8f78dcba80e3",
              "subnet-0ad3fe6e1c42b71ad"
            ],
            "tags": {
              "Name": "eks-workshop-default",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-default",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:route-table/rtb-04e5ece5bcd814f22",
            "default_route_table_id": "rtb-04e5ece5bcd814f22",
            "id": "rtb-04e5ece5bcd814f22",
            "owner_id": "553999167352",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-workshop-default",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-default",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:security-group/sg-0d2214a00ceb1263a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d2214a00ceb1263a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "553999167352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-workshop-default",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-default",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09148f85c6b6345b6",
            "association_id": "eipassoc-0732f826da043cd63",
            "domain": "vpc",
            "id": "eipalloc-09148f85c6b6345b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09c876f9c4036c98d",
            "private_dns": "ip-10-42-7-196.ec2.internal",
            "private_ip": "10.42.7.196",
            "public_dns": "ec2-107-21-50-177.compute-1.amazonaws.com",
            "public_ip": "107.21.50.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-workshop-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:internet-gateway/igw-0aa5cba38e4bd7145",
            "id": "igw-0aa5cba38e4bd7145",
            "owner_id": "553999167352",
            "tags": {
              "Name": "eks-workshop",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09148f85c6b6345b6",
            "association_id": "eipassoc-0732f826da043cd63",
            "connectivity_type": "public",
            "id": "nat-0fd8b64b44d55c067",
            "network_interface_id": "eni-09c876f9c4036c98d",
            "private_ip": "10.42.7.196",
            "public_ip": "107.21.50.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d3ac8eb999e7814",
            "tags": {
              "Name": "eks-workshop-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04397577daaba00e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd8b64b44d55c067",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04397577daaba00e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa5cba38e4bd7145",
            "id": "r-rtb-00fcd7bb0011fc5ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fcd7bb0011fc5ea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:route-table/rtb-04397577daaba00e8",
            "id": "rtb-04397577daaba00e8",
            "owner_id": "553999167352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd8b64b44d55c067",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-workshop-SubnetPrivate",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPrivate",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:route-table/rtb-00fcd7bb0011fc5ea",
            "id": "rtb-00fcd7bb0011fc5ea",
            "owner_id": "553999167352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa5cba38e4bd7145",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-workshop-SubnetPublic",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPublic",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055bd068e3a6fa926",
            "route_table_id": "rtb-04397577daaba00e8",
            "subnet_id": "subnet-00af69a7d8996a975"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044d53e663bca3471",
            "route_table_id": "rtb-04397577daaba00e8",
            "subnet_id": "subnet-0abaa8f78dcba80e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f39b2a292828600",
            "route_table_id": "rtb-04397577daaba00e8",
            "subnet_id": "subnet-070fcfa3b6c1d474a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b1069c9bfa75a01",
            "route_table_id": "rtb-00fcd7bb0011fc5ea",
            "subnet_id": "subnet-08d3ac8eb999e7814"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087d738b800ace854",
            "route_table_id": "rtb-00fcd7bb0011fc5ea",
            "subnet_id": "subnet-0ad3fe6e1c42b71ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c149c90012b826e1",
            "route_table_id": "rtb-00fcd7bb0011fc5ea",
            "subnet_id": "subnet-02b404ea155990385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:subnet/subnet-00af69a7d8996a975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.42.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00af69a7d8996a975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553999167352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-workshop-SubnetPrivate-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "karpenter.sh/discovery": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPrivate-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "karpenter.sh/discovery": "eks-workshop"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:subnet/subnet-0abaa8f78dcba80e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abaa8f78dcba80e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553999167352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-workshop-SubnetPrivate-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "karpenter.sh/discovery": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPrivate-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "karpenter.sh/discovery": "eks-workshop"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:subnet/subnet-070fcfa3b6c1d474a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070fcfa3b6c1d474a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553999167352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-workshop-SubnetPrivate-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "karpenter.sh/discovery": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPrivate-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "karpenter.sh/discovery": "eks-workshop"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:subnet/subnet-08d3ac8eb999e7814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.42.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d3ac8eb999e7814",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553999167352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-workshop-SubnetPublic-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPublic-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:subnet/subnet-0ad3fe6e1c42b71ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad3fe6e1c42b71ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553999167352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-workshop-SubnetPublic-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPublic-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:subnet/subnet-02b404ea155990385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b404ea155990385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553999167352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-workshop-SubnetPublic-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-workshop-SubnetPublic-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a4a241f05279698b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553999167352:vpc/vpc-0a4a241f05279698b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0b26998fb6ff5de80",
            "default_route_table_id": "rtb-04e5ece5bcd814f22",
            "default_security_group_id": "sg-0d2214a00ceb1263a",
            "dhcp_options_id": "dopt-07941600fbc650cb9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4a241f05279698b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e5ece5bcd814f22",
            "owner_id": "553999167352",
            "tags": {
              "Name": "eks-workshop",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            },
            "tags_all": {
              "Name": "eks-workshop",
              "created-by": "eks-workshop-v2",
              "env": "eks-workshop"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}